# bridgefmtspihelper

./: CMakeLists.txt  README.md  sync.profile
src/: CMakeLists.txt  src.pro
src/bridgefmtspihelper/: CMakeLists.txt  QBridgeFmtSpiHelper  bridgefmtspihelper-lib.pri  bridgefmtspihelper.cpp  bridgefmtspihelper.h  bridgefmtspihelper.pro  bridgefmtspihelperConfig.cmake.in  bridgefmtspihelper_global.h  bridgefmtspihelper_p.h
tests/auto/cmake/: CMakeLists.txt  cmake.pro
